<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        style="@style/MyLoginForm"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="false">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_large"
                android:background="@null"
                android:requiresFadingEdge="horizontal"
                android:fadingEdgeLength="20dp"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:textAppearance="@style/TextAppearance.Large">

                <requestFocus />

            </EditText>

            <TextView
                android:id="@+id/email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_inline"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_large"
                tools:text="An error occurred"
                android:textColor="?attr/textColorError"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/padding_large"
            android:orientation="vertical"
            android:focusable="false">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_large"
                android:background="@null"
                android:requiresFadingEdge="horizontal"
                android:fadingEdgeLength="20dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@integer/ime_action_id_signin"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:textAppearance="@style/TextAppearance.Large">

            </EditText>

            <TextView
                android:id="@+id/password_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_inline"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_large"
                tools:text="An error occurred"
                android:textColor="?attr/textColorError"
                />

            <TextView
                android:id="@+id/login_help_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_inline"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_large"
                android:text="@string/login_help_tip"
                android:textColor="?android:attr/textColorTertiary"
                android:visibility="invisible"
                />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="200dp"
            android:layout_height="@dimen/touch_size_comfy"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/padding_huge"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:text="@string/action_sign_in"
            />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/padding_huge"
            android:paddingBottom="@dimen/padding_inline"
            android:visibility="gone"
            />

    </FrameLayout>

</LinearLayout>
