...
            android:textColor="@color/text_primary_inverted_dim"
            android:text="https://"
            tools:ignore="HardcodedText"
            />

        <EditText
            android:id="@+id/blog_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/blog_url_title"
            android:layout_toRightOf="@id/blog_url_protocol"
            android:layout_toEndOf="@id/blog_url_protocol"
            android:layout_marginRight="@dimen/padding_large"
...

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/next_btn"
            android:layout_width="200dp"
            android:layout_height="@dimen/touch_size_comfy"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/padding_huge"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
...
